inline patch rule

--- a/kustomization/client-1/kustomization.yaml
+++ b/kustomization/client-1/kustomization.yaml
@@ -12,4 +12,10 @@ patches:
       version: v1alpha1
       kind: Application
       name: guestbook
-    path: ./application.yaml
+    path: |- 
+      - op: replace
+        path: /spec/project
+        value: client-1
+      - op: replace
+        path: /spec/destination/name
+        value: client-1
