--- a/kustomization/base/nginx/nginx.yaml
+++ b/kustomization/base/nginx/nginx.yaml
@@ -1,41 +1,24 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ingress-nginx
+  name: nginx
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: ingress-nginx
-  namespace: ingress-nginx
+  name: nginx-deployment
 spec:
-  interval: 5m0s
-  url: https://kubernetes.github.io/ingress-nginx 
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: ingress-nginx
-  namespace: ingress-nginx
-spec:
-  interval: 5m
-  chart:
+  selector:
+    matchLabels:
+      app: nginx
+  replicas: 2 # tells deployment to run 2 pods matching the template
+  template:
+    metadata:
+      labels:
+        app: nginx
     spec:
-      chart: ingress-nginx
-      version: ">=4.7.2 <5.0.0"
-      sourceRef:
-        kind: HelmRepository
-        name: ingress-nginx
-        namespace: ingress-nginx
-      interval: 1m
-  upgrade:
-    remediation:
-      remediateLastFailure: true
-  test:
-    enable: true
-  values:
-    controller:
-      resources:
-        requests:
-          cpu: 100m
-          memory: 64Mi
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
