--- a/kustomization/client-1/flux/nginx-2/kustomization.yaml
+++ b/kustomization/client-1/flux/nginx-2/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namePrefix: app2-
+namespace: app2
+
 
 resources:
 - ../../../base/nginx/
