--- a/kustomization/client-2/flux/nginx-2/kustomization.yaml
+++ b/kustomization/client-2/flux/nginx-2/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namePrefix: app2-
+namespace: app2
 
 resources:
 - ../../../base/nginx/
@@ -14,8 +15,5 @@ patches:
       name: ingress-nginx
     patch: |- 
       - op: replace
-        path: /spec/values/controller/resources
-        value: 
-          requets:
-            cpu: 200m
-            memory: 300Mi
+        path: /spec/replicas
+        value: 4
