--- a/kustomization/client-2/flux/nginx/kustomization.yaml
+++ b/kustomization/client-2/flux/nginx/kustomization.yaml
@@ -2,11 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namePrefix: app1-
+namespace: app1
 
 resources:
 - ../../../base/nginx/
 
 patches:
+  - path: ./patch.yaml
   - target:
       group: helm.toolkit.fluxcd.io
       version: v2beta1
@@ -14,7 +16,7 @@ patches:
       name: ingress-nginx
     patch: |- 
       - op: replace
-        path: /spec/values/controller/resources
+        path: /spec/
         value: 
           requets:
             cpu: 200m
