--- a/kustomization/client-2/flux/nginx-2/kustomization.yaml
+++ b/kustomization/client-2/flux/nginx-2/kustomization.yaml
@@ -8,12 +8,10 @@ resources:
 - ../../../base/nginx/
 
 patches:
-  - target:
-      group: helm.toolkit.fluxcd.io
-      version: v2beta1
-      kind: HelmRelease
-      name: ingress-nginx
-    patch: |- 
-      - op: replace
-        path: /spec/replicas
-        value: 4
+  - patch: |-
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: nginx-deployment
+      spec:
+        replicas: 4 # tells deployment to run 2 pods matching the template
