--- a/fluxcd/clients/client-1/flux-system/apps.yaml
+++ b/fluxcd/clients/client-1/flux-system/apps.yaml
@@ -4,8 +4,8 @@ metadata:
   name: n1-c1
   namespace: flux-system
 spec:
-  interval: 3m0s
-  path: ./kustomization/client-1/flux/nginx
+  interval: 30s
+  path: ./fluxcd/clients/client-1/app1/
   prune: true
   sourceRef:
     kind: GitRepository
@@ -17,8 +17,8 @@ metadata:
   name: n2-c1
   namespace: flux-system
 spec:
-  interval: 3m0s
-  path: ./kustomization/client-1/flux/nginx-2
+  interval: 30s
+  path: ./fluxcd/clients/client-1/app2/
   prune: true
   sourceRef:
     kind: GitRepository
