--- a/fluxcd/clients/client-2/flux-system/apps.yaml
+++ b/fluxcd/clients/client-2/flux-system/apps.yaml
@@ -4,8 +4,8 @@ metadata:
   name: n1-c2
   namespace: flux-system
 spec:
-  interval: 10m0s
-  path: ../../kustomization/client-2/flux/nginx
+  interval: 30s
+  path: ./fluxcd/clients/client-2/app1/
   prune: true
   sourceRef:
     kind: GitRepository
@@ -17,8 +17,8 @@ metadata:
   name: n2-c2
   namespace: flux-system
 spec:
-  interval: 10m0s
-  path: ../../kustomization/client-2/flux/nginx-2
+  interval: 30s
+  path: ./fluxcd/clients/client-2/app2/
   prune: true
   sourceRef:
     kind: GitRepository
