--- a/fluxcd/clients/client-1/app1/kustomization.yaml
+++ b/fluxcd/clients/client-1/app1/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namePrefix: app1-
+namePrefix: app1c1-
 namespace: app1
 
 resources:
