--- a/fluxcd/clients/client-1/app1/kustomization.yaml
+++ b/fluxcd/clients/client-1/app1/kustomization.yaml
@@ -9,11 +9,10 @@ resources:
 
 patches:
   - target:
-      group: helm.toolkit.fluxcd.io
-      version: v2beta1
-      kind: HelmRelease
-      name: ingress-nginx
-    patch: |- 
+      version: v1
+      kind: Deployment
+      name: nginx-deployment
+    patch: |-
       - op: replace
         path: /spec/replicas
         value: 1
