--- a/fluxcd/clients/client-1/flux-system/apps.yaml
+++ b/fluxcd/clients/client-1/flux-system/apps.yaml
@@ -24,3 +24,16 @@ spec:
     kind: GitRepository
     name: flux-system
 ---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: n2-c1
+  namespace: flux-system
+spec:
+  interval: 30s
+  path: ./fluxcd/clients/client-1/wiki/
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
