--- a/fluxcd/clients/client-1/flux-system/apps.yaml
+++ b/fluxcd/clients/client-1/flux-system/apps.yaml
@@ -27,7 +27,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: n2-c1
+  name: wiki
   namespace: flux-system
 spec:
   interval: 30s
