--- a/fluxcd/clients/client-1/flux-system/apps.yaml
+++ b/fluxcd/clients/client-1/flux-system/apps.yaml
@@ -27,11 +27,11 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: wiki
+  name: podinfo
   namespace: flux-system
 spec:
   interval: 30s
-  path: ./fluxcd/clients/client-1/wiki/
+  path: ./fluxcd/clients/client-1/podinfo/
   prune: true
   sourceRef:
     kind: GitRepository
