--- a/fluxcd/clients/client-1/podinfo/kustomization.yaml
+++ b/fluxcd/clients/client-1/podinfo/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: wiki
+namespace: podinfo
 
 resources:
 - ../../../base/podinfo/
