--- a/fluxcd/clients/client-1/podinfo/kustomization.yaml
+++ b/fluxcd/clients/client-1/podinfo/kustomization.yaml
@@ -11,7 +11,7 @@ patches:
       group: helm.toolkit.fluxcd.io
       version: v2beta1
       kind: HelmRelease
-      name: wiki
+      name: podinfo
     patch: |-
       - op: replace
         path: /spec/values
